# elephantasm-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
elephantasm/: __init__.py  client.py  config.py  exceptions.py  functions.py  types.py
examples/: basic_usage.py  langchain_agent.py  multi_anima.py
tests/: conftest.py  test_client.py  test_event_type_validation.py  test_functions.py
