[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elephantasm"
version = "0.2.0"
description = "Long-Term Agentic Memory SDK - Give your AI agents persistent, evolving memory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Elephantasm", email = "dev@elephantasm.com" }
]
keywords = [
    "ai",
    "agents",
    "memory",
    "llm",
    "long-term-memory",
    "agentic",
    "context",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://elephantasm.com"
Documentation = "https://docs.elephantasm.com"
Repository = "https://github.com/kaminocorp/elephantasm-py"
Issues = "https://github.com/kaminocorp/elephantasm-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["elephantasm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
